--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
-title: "Gean Costa"
-logo:
+title: "gean-costa.github.io"
+description: "Um quase (engenheiro da computação & desenvolvedor Python & cientista de dados)"
